# test_uow_structure

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  check_alembic_heads.py  docker-compose.yaml  pyproject.toml
app/adapters/api/http/: main.py
app/adapters/api/http/v1/dto/: customer.py
app/adapters/api/http/v1/routers/: customer_router.py
app/common/exceptions/: exceptions.py
app/common/models/: arbitrary_model.py
app/common/repository/: interfaces.py  repository.py
app/common/uow/: interfaces.py  uow.py
app/domain/: unit_of_work.py
app/domain/customers/: customer.py
app/domain/customers/repositories/: customers.py  interfaces.py
app/domain/dependencies/: uow.py
app/domain/models/: base.py  customers.py  orders.py
app/domain/orders/: order.py
app/domain/orders/repositories/: interfaces.py  orders.py
app/infrastructure/database/: database.py
app/infrastructure/database/migrations/: base.py  env.py
app/infrastructure/database/migrations/versions/: 2025_01_24_190139_initial_migration.py
app/services/: customer_service.py  interfaces.py
app/settings/: settings.py
tests/: conftest.py  test_create_customer.py
