[tool.poetry]
name = "test-uow-structure"
version = "0.1.0"
description = "test service"
authors = ["Vadim <vadimmelnik977@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
fastapi = "^0.115.7"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
alembic = "^1.14.1"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
greenlet = "^3.1.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
